--- a/.classpath
+++ b/.classpath
@@ -6,6 +6,7 @@
 			<attribute name="javadoc_location" value="http://opencsv.sourceforge.net/apidocs/"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="filedrop.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="miglayout15-swing.jar" sourcepath="miglayout-src.zip"/>
 	<classpathentry kind="output" path="bin"/>
